adcionei um link do comercial

--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <title>veiculo teste</title>
 </head>
 <body>
-    <img src=""
+    <img src="auditt1.jpg"> clicar aqui para ver iamgem 1
+    <img src="auditt2.jpg" > clicar aqui para ver iamgem 2
+    <img src="auditt3.jpg" > clicar aqui para ver iamgem 3
+    <img src="auditt4.jpg" > clicar aqui para ver iamgem 4
+    <img src="auditt5.jpg" > clicar aqui para ver iamgem 5
+    <img src="auditt6.jpg" > clicar aqui para ver iamgem 6
+    <a href="https://www.youtube.com/watch?v=SpdYJGaKCdg"> clique aqui para ver o comercial do veiculo</a>
 </body>
 </html>
